[gd_scene load_steps=10 format=4 uid="uid://cxjkrv6ghfcib"]

[ext_resource type="PackedScene" uid="uid://c18muratispac" path="res://levels/level.tscn" id="1_ry3yj"]
[ext_resource type="Script" path="res://levels/boss_1_level.gd" id="2_55xh5"]
[ext_resource type="PackedScene" uid="uid://bm87xo8bekamj" path="res://world/forest_tiles_layer.tscn" id="2_sir7u"]
[ext_resource type="Script" path="res://world/door.gd" id="3_yyf0f"]
[ext_resource type="Resource" uid="uid://ypceaaufc68k" path="res://level_connections/level_3_to_boss_1_level.tres" id="4_c3x0n"]
[ext_resource type="PackedScene" uid="uid://idp4s8vywvcy" path="res://enemies/vampire_boss.tscn" id="6_yey3u"]
[ext_resource type="PackedScene" uid="uid://bgg3hgts707j3" path="res://world/boss_barrier.tscn" id="7_4vg3k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dbnqq"]
size = Vector2(48, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ae2k"]
size = Vector2(48, 16)

[node name="Boss1Level" instance=ExtResource("1_ry3yj")]
script = ExtResource("2_55xh5")

[node name="ColorRect" parent="." index="0"]
offset_top = -16.0
offset_right = 320.0
offset_bottom = 192.0

[node name="ForestTilesLayer" parent="." index="1" instance=ExtResource("2_sir7u")]
tile_map_data = PackedByteArray("AAACAAAAAAAFAAEAAAACAAEAAAAGAAEAAAACAAIAAAAEAAEAAAACAAMAAAAGAAEAAAACAAQAAAABAAEAAAACAAUAAAACAAEAAAACAAYAAAAFAAEAAAACAAcAAAADAAEAAAACAAgAAAABAAEAAAACAAkAAAABAAAAAAACAAoAAAADAAAAAAADAAoAAAABAAAAAAAEAAoAAAAGAAEAAAAFAAoAAAAEAAEAAAAGAAoAAAAEAAEAAAAHAAoAAAACAAEAAAAIAAoAAAAAAAEAAAAMAAoAAAACAAEAAAANAAoAAAABAAEAAAAOAAoAAAABAAEAAAAPAAoAAAAEAAEAAAAQAAoAAAAAAAEAAAARAAoAAAAAAAAAAAASAAAAAAADAAEAAAASAAEAAAAEAAEAAAASAAIAAAAAAAEAAAASAAMAAAAEAAEAAAASAAQAAAAGAAEAAAASAAUAAAADAAEAAAASAAYAAAAAAAEAAAASAAcAAAABAAEAAAASAAgAAAACAAEAAAASAAkAAAADAAEAAAADAAAAAAAAAAAAAAAEAAAAAAAFAAEAAAAFAAAAAAACAAEAAAAGAAAAAAAAAAEAAAAHAAAAAAAFAAEAAAAIAAAAAAAAAAEAAAAJAAAAAAADAAEAAAAKAAAAAAAFAAEAAAALAAAAAAABAAEAAAAMAAAAAAABAAEAAAANAAAAAAAAAAEAAAAOAAAAAAAAAAEAAAAPAAAAAAABAAAAAAAQAAAAAAACAAEAAAARAAAAAAAEAAEAAAATAAUAAAABAAEAAAATAAYAAAADAAEAAAATAAcAAAAFAAEAAAAOAP//AAABAAAAAAAPAP//AAABAAAAAAAQAP//AAABAAAAAAARAP//AAACAAEAAAAFAP//AAAFAAEAAAABAAIAAAAGAAEAAAABAAMAAAACAAEAAAABAAQAAAAAAAEAAAABAAUAAAAEAAEAAAABAAYAAAAGAAEAAAABAAgAAAAEAAEAAAABAAkAAAAFAAEAAAAGAAsAAAAAAAEAAAAQAAsAAAAGAAEAAAAGAP//AAACAAEAAAADAAkAAAAAAAEAAAARAAkAAAAGAAEAAAAAAAoAAAABAAAAAAACAAsAAAABAAAAAAAAAAYAAAABAAAAAAATAAMAAAABAAAAAAABAAsAAAACAAAAAAAEAAsAAAACAAAAAAABAAcAAAACAAAAAAAAAAIAAAACAAAAAAAMAP//AAACAAAAAAATAAEAAAACAAAAAAATAAQAAAADAAAAAAAAAAkAAAADAAAAAAAAAAgAAAAEAAAAAAANAP//AAAEAAAAAAAKAAcAAAAFAAAAAAAQAAIAAAAFAAAAAAAQAAkAAAAFAAAAAAAMAAkAAAAGAAAAAAAGAAgAAAAGAAAAAAAFAAIAAAAGAAAAAAAEAAMAAAAGAAAAAAANAAIAAAAGAAAAAAAPAAYAAAAEAAAAAAAEAAcAAAAEAAAAAAAJAAEAAAAEAAAAAAAOAAcAAAADAAAAAAAQAAcAAAADAAAAAAAQAAYAAAADAAAAAAAOAAUAAAAEAAAAAAARAAgAAAAEAAAAAAATAAgAAAAAAAAAAAA=")

[node name="Door" type="Area2D" parent="." index="2"]
position = Vector2(168, 184)
script = ExtResource("3_yyf0f")
exit_direction = 1
exit_distance = 12
connection = ExtResource("4_c3x0n")
next_level_path = "res://levels/level_3_save.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door" index="0"]
shape = SubResource("RectangleShape2D_dbnqq")

[node name="CameraTarget" type="RemoteTransform2D" parent="." index="3"]
position = Vector2(168, 92)

[node name="Marker2D" type="Marker2D" parent="." index="4"]
position = Vector2(80, 56)

[node name="Marker2D2" type="Marker2D" parent="." index="5"]
position = Vector2(168, 88)

[node name="Marker2D3" type="Marker2D" parent="." index="6"]
position = Vector2(256, 56)

[node name="VampireBoss" parent="." index="7" node_paths=PackedStringArray("target_markers") instance=ExtResource("6_yey3u")]
position = Vector2(168, 64)
target_markers = [NodePath("../Marker2D"), NodePath("../Marker2D2"), NodePath("../Marker2D3")]

[node name="BossBarrier" parent="." index="8" instance=ExtResource("7_4vg3k")]
visible = false
position = Vector2(144, 160)

[node name="Trigger" type="Area2D" parent="." index="9"]
position = Vector2(168, 144)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger" index="0"]
shape = SubResource("RectangleShape2D_2ae2k")
